# METALoci

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  kk  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/: rename_project.sh
docs/: api.rst  cli_usage.rst  conf.py  index.rst  install.rst  requirements.txt  tutorial.ipynb  tutorial.rst
docs/source/: metaloci.graph_layout.rst  metaloci.misc.rst  metaloci.plot.rst  metaloci.rst  metaloci.spatial_stats.rst  metaloci.tests.rst  metaloci.tools.rst  metaloci.utility_scripts.rst  modules.rst
metaloci/: __init__.py  __main__.py  base.py  mlo.py
metaloci/graph_layout/: __init__.py  kk.py
metaloci/misc/: __init__.py  misc.py
metaloci/plot/: __init__.py  plot.py
metaloci/spatial_stats/: __init__.py  lmi.py
metaloci/tests/: __init__.py  test_tools.py
metaloci/tests/data/: regions_test.txt  signals_test.txt
metaloci/tests/data/signal/: mm39_organoid_ATAC_4000_chr19.bed
metaloci/tools/: __init__.py  figure.py  layout.py  ml.py  prep.py  scan.py
metaloci/tools/from_Marc/: 00_parse_coords.py  01_kk_layouts.py  02_LMI_anysignal.py  03_LMI_figure.py
metaloci/utility_scripts/: __init__.py  bts.py  compressor.py  gene_selector.py  param_search.py  prep_coords_genes.py  sniffer.py
tests/: conftest.py  test_base.py  test_tools.py
tests/data/: aggregate.txt
utility_scripts/: prep_coordinates_file_genes.py
